<resources>
    <string name="app_name">CnmRc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_exit">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="app_exit1">뒤로가기 을 한번 더 누르시면 종료됩니다.</string>
    <string name="qwerty_hint">입력해주세요.</string>
    <string name="complete">완료</string>
    <string name="network_warning">Wifi 혹은 3G망이 연결되지 않았거나 원활하지 않습니다.네트워크 확인후 다시 접속해 주세요!</string>
    <string name="qwerty_cancel">취소</string>
    <string name="qwerty_textclear">TV글자지우기</string>
    <string name="mirroring_exit">미러TV종료</string>
    <string name="vod_main_title">VOD</string>
    <string name="vod_main_title_1">애니메이션\u0026키즈</string>
    <string-array name="vod_category">
        <item>예고편</item>
        <item>최신영화</item>
        <item>TV다시보기</item>
        <item>장르별</item>
    </string-array>
    <string-array name="vod_class_type">
        <item>VodSemi</item>
        <item>VodSemi</item>
        <item>VodSemi</item>
        <item>VodList</item>
    </string-array>
    <string-array name="tvch_category">
        <item>전체채널</item>
        <item>장르별채널</item>
        <item>HD채널</item>
        <item>유료채널</item>
    </string-array>
    <string-array name="tvch_genre">
        <item>지상파/장르</item>
        <item>영화</item>
        <item>드라마/여성</item>
        <item>음악/오락</item>
        <item>스포츠/게임</item>
        <item>뉴스/다큐</item>
        <item>교육/키즈</item>
        <item>종교/기타</item>
        <item>홈쇼핑</item>
    </string-array>
    <string-array name="tvch_class_type">
        <item>TvchSemi</item>
        <item>TvchList</item>
        <item>TvchSemi</item>
        <item>TvchSemi</item>
    </string-array>
    <string name="search_title">검색</string>
    <string name="search_subtitle">최근 검색어</string>
    <string name="search_recently_delete">최근 검색어 삭제</string>
    <string name="search_hint">검색어를 입력해 주세요.</string>
    <string name="search_vod">VOD</string>
    <string name="search_tvch">프로그램</string>
    <string name="search_initial_1">컨텐츠명 또는 연관단어를</string>
    <string name="search_initial_2">입력해 주세요.</string>
    <string name="config_title">설정</string>
    <string name="config_area_title">지역 설정</string>
    <string name="config_product_title">상품 설정</string>
    <string name="config_remocon">리모컨 설정</string>
    <string name="config_vibrate_effect">진동효과</string>
    <string name="config_sound_effect">소리효과</string>
    <string name="config_touch_speed">터치속도</string>
    <string name="config_alarm">알림 설정</string>
    <string name="config_vod_update_alarm">VOD업데이트 알림</string>
    <string name="config_watch_res_alarm">시청예약알림</string>
    <string name="config_adult_cert">성인인증</string>
    <string name="config_auto_adult_cert">자동성인인증하기</string>
    <string name="config_adult_cert_on">인증 상태입니다.</string>
    <string name="config_adult_cert_off">미인증 상태입니다.</string>
    <string name="config_adult_cert_line_1">자동성인인증으로 설정하시면</string>
    <string name="config_adult_cert_line_2">인증절차없이 컨텐츠를 감상하실 수 있습니다.</string>
    <string name="config_area_product">지역/상품 설정</string>
    <string name="config_all_clear">모든 설정 초기화</string>
    <string name="config_gtv">셋탑박스 설정</string>
    <string name="config_initial">초기화</string>
    <string name="adult_cert_not_19">해당 VOD는 19세 이상 시청등급입니다.</string>
    <string name="adult_cert_name">이름(실명)</string>
    <string name="adult_cert_name_input">이름입력</string>
    <string name="adult_cert_social_security_number">주민번호</string>
    <string name="adult_cert_social_security_number_except">\'-\' 제외한 주민번호 입력</string>
    <string name="adult_cert_warning_msg">귀하가 입력하시는 주민등록번호는 성인확인 목적으로만 
        사용되며 별도로 저장하지 않습니다.
        
        \n개정된 \'주민등록법\'에 의해 타인의 주민등록번호를 도용하여 부정사용하는 경우 3년 이하의 징역 또는
        1천만원의 벌금이 부과됩니다.</string>
    <string name="device_finder_title">셋탑박스 연결</string>
    <string name="device_finder_subtitle">셋탑박스를 선택하세요.</string>
    <string name="device_finder_manually">IP 주소 직접 입력.</string>
    <string name="manual_ip_hint">xxx.xxx.xxx.xxx</string>
    <string name="manual_ip_error_address">잘못된 IP 주소입니다.</string>
    <string name="manual_ip_no_address">IP 주소를 입력하십시요.</string>
    <string name="unkown_tgt_name">Unknown</string>
    <string name="unkown_tgt_addr">unknown address</string>
    <string name="no_pairing_code">연결 코드를 입력하십시요.</string>
    <string name="pairing_code_hint">연결 코드를 입력하십시요.</string>
    <string name="pairing_failed_toast">씨앤앰 TV 연결이 실패했습니다.</string>
    <string name="pairing_succeeded_toast">씨앤앰 TV 연결이 성공했습니다.</string>
    <string name="popup_yes">확인</string>
    <string name="popup_no">취소</string>
    <string name="popup_search_title">최근 검색어 삭제</string>
    <string name="popup_search_line_1">최근 검색어를</string>
    <string name="popup_search_line_2">모두 삭제하시겠습니까?</string>
    <string name="popup_mirroring_title">미러TV</string>
    <string name="popup_mirroring_enter_line_1">미러TV로 이동하시겠습니까?</string>
    <string name="popup_mirroring_enter_line_2">스트리밍시간이 몇 초 소요됩니다.</string>
    <string name="popup_mirroring_exit_line_1">미러TV를 종료하시겠습니까?</string>
    <string name="popup_gtv_connection_title">씨앤앰 TV 연결</string>
    <string name="popup_gtv_connection_line_1">씨앤앰 셋탑박스를</string>
    <string name="popup_gtv_connection_line_2">연결하시겠습니까?</string>
    <string name="popup_gtv_searching_title">씨앤앰 TV 찾기</string>
    <string name="popup_gtv_searching_line_1">씨앤앰 셋탑박스를</string>
    <string name="popup_gtv_searching_line_2">찾고 있는 중입니다.</string>
    <string name="popup_gtv_timeout_title">씨앤앰 TV 찾기</string>
    <string name="popup_gtv_timeout_line_1">씨앤앰 셋탑박스를</string>
    <string name="popup_gtv_timeout_line_2">찾을 수 없습니다.</string>
    <string name="popup_gtv_nowifi_title">WiFi Network not available</string>
    <string name="popup_gtv_nowifi_line_1">설정에 가셔서</string>
    <string name="popup_gtv_nowifi_line_2">WiFi를 켜십시요.</string>
    <string name="popup_gtv_manually_input_title">IP 주소 입력</string>
    <string name="popup_gtv_manually_input_line_1">IP주소는 셋탑박스의 설정 > 네트워크 ></string>
    <string name="popup_gtv_manually_input_line_2">네크워크 정보에서 확인할 수 있습니다.</string>
    <string name="popup_gtv_waiting_pairing_code_title">연결 코드</string>
    <string name="popup_gtv_waiting_pairing_code_line_1">연결 코드를</string>
    <string name="popup_gtv_waiting_pairing_code_line_2">기다리고 있습니다.</string>
    <string name="popup_gtv_pairing_dialog_title">연결 코드 입력</string>
    <string name="popup_gtv_not_alive_title">알림</string>
    <string name="popup_gtv_not_alive_input_line_1">셋탑박스가 연결이 되어 있지 않습니다.</string>
    <string name="popup_gtv_not_alive_input_line_2">폰에 저장한 후 셋탑박스가 연결되면</string>
    <string name="popup_gtv_not_alive_input_line_3">일괄 저장됩니다!</string>
    <string name="popup_gtv_not_alive_tv_input_line_1">셋탑박스가</string>
    <string name="popup_gtv_not_alive_tv_input_line_2">연결되어 있지 않습니다!</string>
    <string name="popup_config_allreset_input_line_1">모든 설정을</string>
    <string name="popup_config_allreset_input_line_2">초기화하시겠습니까?</string>
    <string name="popup_tvreserving_title">시청예약을 하시겠습니까?</string>
    <string name="popup_tvreserving_confirm_title">시청예약</string>
    <string name="popup_config_adult_name_line_1">이름을</string>
    <string name="popup_config_adult_name_line_2">입력해 주십시요!</string>
    <string name="popup_config_adult_number_line_1">주민등록번호을</string>
    <string name="popup_config_adult_number_line_2">입력해 주십시요!</string>
    <string name="popup_config_adult_number1_line_1">올바른 주민등록번호을</string>
    <string name="popup_config_adult_number1_line_2">입력해 주십시요!</string>
    <string name="popup_config_adult_result_succeed_line_1">성인인증 성공!</string>
    <string name="popup_config_adult_result_fail_line_1">인증실패</string>
    <string name="popup_config_adult_cert_need_line_1">성인인증이 필요한 컨텐츠 입니다.</string>
    <string name="popup_config_adult_cert_need_line_2">성인인증을 하시겠습니까?</string>
    <string name="accessibility_no_action"></string>
    <string name="accessibility_general_button">Button Pressed</string>
    <string name="accessibility_rc_icon">Remocon Icon</string>
    <string name="accessibility_stb_power">SetTopBox Power Button</string>
    <string name="accessibility_integration_ui_main">Integration UI main on SetTopBox</string>
    <string name="accessibility_vod">VOD main menu</string>
    <string name="accessibility_ch">TV channel main menu</string>
    <string name="accessibility_search">Search menu</string>
    <string name="accessibility_rcmenu_mirror">Mirroring TV</string>
    <string name="accessibility_rcmenu_4way">Directional Pad</string>
    <string name="accessibility_rcmenu_qwerty">Qwerty</string>
    <string name="accessibility_rcmenu_chvol">Channel and Volume</string>
    <string name="accessibility_rcmenu_config">Application Configuration</string>
    <string name="accessibility_vod_big_list">VOD Big List</string>
    <string-array name="strarray_languages">
        <item> 영어 </item>
        <item> 일본어 </item>
        <item> 중국어 </item>
        <item> 독일어 </item>
        <item> 프랑스어 </item>
        <item> 스페인어 </item>
        <item> 러시아어 </item>
    </string-array>
    <string-array name="search_recently_word">
        <item>설국 열차</item>
        <item>미스트고</item>
        <item>올버린</item>
        <item>오로라공주</item>
        <item>애니메이션</item>
        <item>교육</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
        <item>검색어</item>
    </string-array>
    <string-array name="vod_genre">
        <item>오늘의 추천</item>
        <item>영화VOD</item>
        <item>인기케이블\u0026미드</item>
        <item>TV다시보기VOD</item>
        <item>애니메이션\u0026키즈</item>
        <item>교육\u0026EBS</item>
        <item>마이TV</item>
    </string-array>
    <string-array name="vod_today_recommendation">
        <item>MD추천</item>
        <item>마니아 추천 VOD</item>
        <item>영화 인기순위</item>
        <item>극장동시상영관</item>
        <item>금주의 신작 VOD</item>
        <item>방학특선 애니BEST</item>
        <item>은밀하게 스릴있게</item>
        <item>나만의 추천 VOD</item>
        <item>VOD이벤트 진행</item>
    </string-array>
    <string name="scroller_text">야구하는 고릴라 ‘링링’과 15세 소녀
세상에 없던 가장 특별한 이야기가 시작된다!

할아버지가 돌아가신 후 홀로 전통의 룡파 서커스를 이끄는 15세 소녀 ‘웨이웨이’. 
그녀의 유일한 친구이자 가족은 태어날 때부터 함께 해 온 45세 고릴라 ‘링링’ 뿐이다. 

285kg의 거구에 사람의 20배에 달하는 힘,
하지만 거친 외모와는 달리 사려 깊은 성격에 언제나 가족처럼 웨이웨이의 곁을 지키는 고릴라 ‘링링’, 야구광이었던 할아버지 덕분에 지금은 서커스보다 야구를 더 잘하는 링링과 웨이웨이의 이야기는 
국경을 넘어 한국까지 큰 화제가 되기에 이른다. 

할아버지가 남긴 빚을 갚기 위해 고군분투하던 웨이웨이는 
큰 돈을 벌게 해주겠다는 악명 높은 에이전트 ‘성충수’의 제안에 링링과 함께 한국행을 결심한다. 
고릴라가 야구를 한다는 위험천만한 발상에 대한 우려에도 불구하고 
돈이라면 무엇이든 하고 마는 성충수 덕에 ‘링링’은 한국 프로야구에 정식으로 데뷔하게 되고, 
타고난 힘과 스피드, 오랜 훈련으로 다져진 정확함까지 갖춘 ‘링링’은 
곧 전국민의 슈퍼스타로 거듭나게 되는데...!

2013년 여름
대한민국 꿈의 영화</string>
    <string name="ok_text">OK</string>
    <string name="core_service_label">Google TV Remote Control Service</string>
    <string name="finder_label">Connect to Google TV</string>
    <string name="config_page_label">Your build is:</string>
    <string name="menu_switch">Switch box</string>
    <string name="menu_manual">Enter manual IP</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bazaar_feedback">Send feedback</string>
    <string name="menu_about">About</string>
    <string name="unknown_build">Unknown</string>
    <string name="finder_searching">Searching for Google TV devices on your network.</string>
    <string name="finder_searching_with_ssid">Searching for Google TV devices on \"%s\" network.</string>
    <string name="finder_wifi_waiting">Waiting for WiFi network.</string>
    <string name="finder_add_other">Add other device</string>
    <string name="finder_connect">Connect</string>
    <string name="finder_cancel">Cancel</string>
    <string name="finder_manual">Add Google TV manually</string>
    <string name="finder_enable">Enable</string>
    <string name="finder_configure">Configure</string>
</resources>