<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/px110"
    android:background="@drawable/topbar_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <com.cnm.cnmrc.custom.ExtendedImageButton
        android:id="@+id/stb_power"
        android:layout_width="@dimen/px98"
        android:layout_height="@dimen/px94"
        android:layout_marginLeft="@dimen/px27"
        android:background="@drawable/xml_rc_stb_power"
        android:contentDescription="@string/accessibility_stb_power" />

    <com.cnm.cnmrc.custom.ExtendedImageButton
        android:id="@+id/integration_ui_main"
        android:layout_width="@dimen/px98"
        android:layout_height="@dimen/px94"
        android:layout_marginLeft="@dimen/px16"
        android:background="@drawable/xml_rc_integration_ui"
        android:contentDescription="@string/accessibility_integration_ui_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px94"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/vod"
            android:layout_width="@dimen/px98"
            android:layout_height="@dimen/px94"
            android:layout_marginRight="@dimen/px10"
            android:background="@drawable/xml_rc_base_top"
            android:contentDescription="@string/accessibility_vod"
            android:src="@drawable/top_icon_vod" />

        <ImageButton
            android:id="@+id/tvch"
            android:layout_width="@dimen/px98"
            android:layout_height="@dimen/px94"
            android:layout_marginRight="@dimen/px10"
            android:background="@drawable/xml_rc_base_top"
            android:contentDescription="@string/accessibility_ch"
            android:src="@drawable/top_icon_ch" />

        <ImageButton
            android:id="@+id/search"
            android:layout_width="@dimen/px98"
            android:layout_height="@dimen/px94"
            android:background="@drawable/xml_rc_base_top"
            android:contentDescription="@string/accessibility_search"
            android:src="@drawable/top_icon_search" />
    </LinearLayout>

</LinearLayout>