<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prevent_click_dispatching"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xml_repeat_default_bg"
    android:orientation="vertical" >

    <!-- top title -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px110"
        android:background="@drawable/topbar_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/config_adult_cert"
            android:textColor="#ffffffff"
            android:textSize="@dimen/sp45"
            android:textStyle="bold" />

        <Button
            android:id="@+id/adult_cert_done"
            android:layout_width="@dimen/px98"
            android:layout_height="@dimen/px58"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px10"
            android:background="@drawable/xml_config_complete"
            android:text="@string/complete"
            android:textColor="#ffeeeeee"
            android:textSize="@dimen/sp32"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- body -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <View
            android:layout_width="@dimen/px36"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <!-- 19 icon -->

            <LinearLayout
                android:id="@+id/adult_cert_not_show_from_vod"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px140"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/not19_icon"
                    android:contentDescription="@string/accessibility_no_action" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/px10"
                    android:singleLine="true"
                    android:text="@string/adult_cert_not_19"
                    android:textColor="#ff7a61aa"
                    android:textSize="@dimen/sp30"
                    >
                </TextView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px50" />

            <!-- name -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/px84"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/px160"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/adult_cert_name"
                    android:textColor="#ff797979"
                    android:textSize="@dimen/sp30"
                    android:textStyle="bold" >
                </TextView>

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:background="@drawable/inputbox"
                    android:hint="@string/adult_cert_name_input" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px56" />

            <!-- Social Security Number -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/px84"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/px160"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/adult_cert_social_security_number"
                    android:textColor="#ff797979"
                    android:textSize="@dimen/sp30"
                    android:textStyle="bold" >
                </TextView>

                <EditText
                    android:id="@+id/edit_social_security_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:inputType="number"
                    android:maxLength="13"
                    android:background="@drawable/inputbox"
                    android:hint="@string/adult_cert_social_security_number_except" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px74" />

            <!-- Auto Adult Certification -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/px48" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/config_auto_adult_cert"
                    android:textColor="#ff797979"
                    android:textSize="@dimen/sp30"
                    android:textStyle="bold" >
                </TextView>

                <com.cnm.cnmrc.custom.SlideToggleButton
                    android:id="@+id/slide_auto_adult_cert"
                    android:layout_width="@dimen/px160"
                    android:layout_height="@dimen/px48"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="#ff464646"
                    android:content="@+id/content_auto_adult_cert"
                    android:handle="@+id/handle_auto_adult_cert"
                    android:orientation="horizontal"
                    android:tag="slide_auto_adult_cert" >

                    <Button
                        android:id="@+id/handle_auto_adult_cert"
                        android:layout_width="@dimen/px80"
                        android:layout_height="@dimen/px48"
                        android:background="@drawable/switch_on" />

                    <View
                        android:id="@+id/content_auto_adult_cert"
                        android:layout_width="@dimen/px160"
                        android:layout_height="@dimen/px48"
                        android:src="#00000000" />
                </com.cnm.cnmrc.custom.SlideToggleButton>
            </RelativeLayout>

            <!-- Warning Message -->

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px100" />

            <TextView
                android:id="@+id/adult_cert_warning_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/px8"
                android:text="@string/adult_cert_warning_msg"
                android:textColor="#ff333333" 
                android:textSize="@dimen/sp28">
            </TextView>
        </LinearLayout>

        <View
            android:layout_width="@dimen/px34"
            android:layout_height="match_parent" />
    </LinearLayout>

    <!-- 하단메뉴공간을 보상하는 영역 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px90"
        android:layout_gravity="bottom"
        android:background="@drawable/xml_repeat_default_bg" />

</LinearLayout>