<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <View
        android:layout_width="@dimen/px20"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/set_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px100" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/px20"
                android:text="@string/config_area_product"
                android:textColor="#ff797979"
                android:textSize="@dimen/sp30" />

            <TextView
                android:id="@+id/config_area_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/px10"
                android:layout_toLeftOf="@+id/config_indicator_area"
                android:paddingBottom="@dimen/px4"
                android:text="강남/HD실속형"
                android:textColor="#ff7961aa"
                android:textSize="@dimen/sp30" />

            <ImageView
                android:id="@id/config_indicator_area"
                android:layout_width="@dimen/px16"
                android:layout_height="@dimen/px29"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/px15"
                android:background="@drawable/indicator_normal"
                android:contentDescription="@string/accessibility_no_action" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px2"
            android:background="@drawable/list_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px100" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/px20"
                android:text="@string/config_all_clear"
                android:textColor="#ff797979"
                android:textSize="@dimen/sp30" />

            <Button
                android:id="@+id/config_all_clear"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px58"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/px15"
                android:background="@drawable/xml_config_initial"
                android:text="@string/config_initial"
                android:textColor="@drawable/xml_search_recently_delete_textcolor"
                android:textSize="@dimen/sp30" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px2"
            android:background="@drawable/list_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px100" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/px20"
                android:text="@string/config_gtv"
                android:textColor="#ff797979"
                android:textSize="@dimen/sp30" />

            <Button
                android:id="@+id/config_gtv"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px58"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/px15"
                android:background="@drawable/xml_config_initial"
                android:text="@string/config_title"
                android:textColor="@drawable/xml_search_recently_delete_textcolor"
                android:textSize="@dimen/sp30" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="@dimen/px20"
        android:layout_height="match_parent" />

</LinearLayout>